@@ -1,3 +1,8 @@
+Tue Oct 19 15:50:05 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_poll.c server/gam_subscription.c: valgrinding
+	  a session raised a couple of problems.
+
 Wed Oct 13 00:40:32 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_node.c server/gam_node.h: adding a new API
